--- a/package.json
+++ b/package.json
@@ -11,18 +11,24 @@
   "dependencies": {
     "@clerk/nextjs": "^5.0.2",
     "@prisma/client": "^5.13.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@stripe/stripe-js": "^3.3.0",
     "@upstash/redis": "^1.30.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.0.2",
     "lucide-react": "^0.373.0",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "openai": "^4.38.5",
     "posthog-js": "^1.129.0",
     "react": "^18",
     "react-dom": "^18",
     "resend": "^3.2.0",
+    "sonner": "^1.4.41",
     "stripe": "^15.3.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
