--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@clerk/nextjs": "^5.0.2",
     "@google/generative-ai": "^0.8.0",
     "@prisma/client": "^5.13.0",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@stripe/stripe-js": "^3.3.0",
     "@tanstack/react-query": "^5.32.0",
     "@upstash/redis": "^1.30.0",
