--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "zod": "^3.23.4"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.34.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
