--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky",
+    "check-types": "tsc --pretty --noEmit",
+    "check-format": "prettier --check .",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@clerk/nextjs": "^5.0.2",
     "@google/generative-ai": "^0.8.0",
     "@prisma/client": "^5.13.0",
-    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -25,7 +28,6 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.373.0",
-    "nanoid": "^5.0.7",
     "next": "14.2.3",
     "posthog-js": "^1.129.0",
     "react": "^18",
@@ -44,7 +46,10 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "postcss": "^8",
+    "prettier": "3.2.5",
     "prisma": "^5.13.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
