--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@stripe/stripe-js": "^3.3.0",
     "@tanstack/react-query": "^5.32.0",
     "@upstash/redis": "^1.30.0",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.373.0",
