--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,14 @@
-# supabase 
+# supabase or any other SQL database url
 DATABASE_URL=
 
 # clerk
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
+# clerk paths
+CLERK_SIGN_IN_URL="/sign-in"
+CLERK_SIGN_UP_URL="/sign-up"
+CLERK_SIGN_OUT_URL="/"
+CLERK_SIGN_IN_REDIRECTION_URL="/editor"
 
 # google gemini ai
 GEMINI_API_KEY=
